feat: add more custom features

--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -1,6 +1,7 @@
 {
   "newFolder": "新建文件夹",
   "upload": "上传",
+  "uploadDir": "上传文件夹",
   "paste": "粘贴",
   "changeView": "更改视图",
   "refresh": "刷新",
