--- a/frontend/src/locales/zh-CN.json
+++ b/frontend/src/locales/zh-CN.json
@@ -51,5 +51,7 @@
   "invalidFileName": "文件名不能包含以下字符：\\ / : * ? \" < > |",
   "folderExists": "目标文件夹中已存在名为 \"{{renameFile}}\" 的文件夹。",
   "collapseNavigationPane": "折叠导航窗格",
-  "expandNavigationPane": "展开导航窗格"
+  "expandNavigationPane": "展开导航窗格",
+  "selectConfirm": "选定",
+  "convertPDFToImg": "将 PDF 转为图片"
 }
